# Mathematical-Optimization

./: .gitignore  .gitmodules  CMakeLists.txt
report1/: CMakeLists.txt  report.md
report1/1/: main.cpp  plot.py
report1/2/: iteration.cpp  performance.cpp  plot_iteration.py
report1/3/: iteration.cpp  performance.cpp  plot_iteration.py
report2/: report.md
